card flip, card comparision, matching pair style change

--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
 <body>
 <header> Memory Game</header>
 <section><i class="material-icons">restore</i>
-    <i class="material-icons">android</i></section>
+    </section>
 
 <br>
 <main id="container">
