Functionalities: restore, timer, moves & success pop up

--- a/Index.html
+++ b/Index.html
@@ -6,13 +6,18 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
+
 </head>
 <body>
 <header> Memory Game</header>
-<section><i class="material-icons">restore</i>
+<section><i id="reset" class="material-icons">restore</i>
     </section>
 
 <br>
+<p id="counter">0 Moves</p>
+<br>
+<span id ="clock">00 : 00</span>
+
 <main id="container">
 
     <ul class="wrapper">
