Functionalities: stars implementation, game reset, card shuffle on game reset

--- a/Index.html
+++ b/Index.html
@@ -8,19 +8,19 @@
 
 
 </head>
-<body>
+
 <header> Memory Game</header>
-<section><i id="reset" class="material-icons">restore</i>
-    </section>
+<section>
+<ul id="rating">
 
-<br>
-<p id="counter">0 Moves</p>
-<br>
-<span id ="clock">00 : 00</span>
-
+</ul>
+<div id="counter">0 Moves</div>
+<div id ="clock">00 : 00</div>
+<i id="reset" class="material-icons">restore</i>
+</section>
 <main id="container">
 
-    <ul class="wrapper">
+    <ul id ="parent" class="wrapper">
 
     </ul>
 </main>
