--- a/Index.html
+++ b/Index.html
@@ -2,26 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory Game</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-
-
 </head>
-
 <header> Memory Game</header>
 <section>
-<ul id="rating">
-
-</ul>
-<div id="counter">0 Moves</div>
-<div id ="clock">00 : 00</div>
-<i id="reset" class="material-icons">restore</i>
+    <ul id="rating">
+    </ul>
+    <div id="counter">0 Moves</div>
+    <div id ="clock">00 : 00</div>
+    <i id="reset" class="material-icons">restore</i>
 </section>
 <main id="container">
-
     <ul id ="parent" class="wrapper">
-
     </ul>
 </main>
 <script src="js/app.js"></script>
