--- a/Index.html
+++ b/Index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory Game</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/mainAboveTablet.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" type="text/css" media="screen and (min-width:600px)"  href="css/mainAboveTablet.css">
+    <link rel="stylesheet" type="text/css" media="screen and (max-width:360px)" href="css/mainUnderMobile.css">
 </head>
 <header> Memory Game</header>
 <section>
